@@ -19,7 +19,7 @@ just because you realized that you're better off storing records as a set instea
 
 == Usage
 
-Simply call +nestable+ in your model and pass the :+theory+ that you want to use along with any options related to it (see Theories below).
+Simply call <tt>nestable</tt> in your model and pass the <tt>:theory</tt> that you want to use along with any options related to it (see Theories below).
 
   class Category < ActiveRecord::Base
     nestable :theory => :tree, :scope => :site_id
@@ -28,27 +28,9 @@ Simply call +nestable+ in your model and pass the :+theory+ that you want to use
 
 == Theories
 
-=== :tree (default)
+Take a look at the documentation[http://rdoc.info/projects/shuber/nestable] for more information about each theory
 
-Pros: 
-
-* Simple and elegant - only requires a foreign key which references a node's parent.
-* Quick writes
-
-
-Cons: 
-
-
-* Can be slow and inefficient for fetching large trees due to recursion - one query is required for each level in a tree.
-
-Options:
-
-
-* :class_name - The class name to use for the parent and children associations. Defaults to the name of the current class.
-* :dependent - The dependent option for the children association. Defaults to :destroy.
-* :order - The default order to use when collecting children, descendants, siblings, etc. Defaults to nil.
-* :parent_column - The name of the foreign key that references a node's parent. Defaults to :parent_id.
-* :scope - A field or an array of fields to scope trees to. Defaults to an empty array.
+* :tree (Nestable::Tree) <b>default</b>
 
 
 == Contact
