@@ -8,6 +8,7 @@
   * Refactor Tree included logic
   * Refactor interface logic
   * Add #{association}_ids methods
+  * Update documentation
 
 2009-06-13 - Sean Huber (shuber@huberry.com)
   * Initial commit
